arregle un bug del hover y del grid gap y otros flex

--- a/practica/50days50projects/P1/src/output.css
+++ b/practica/50days50projects/P1/src/output.css
@@ -730,6 +730,10 @@ video {
   margin-bottom: 1.5rem;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
 .mt-12{
   margin-top: 3rem;
 }
@@ -742,32 +746,8 @@ video {
   margin-top: 6rem;
 }
 
-.mt-3{
-  margin-top: 0.75rem;
-}
-
 .mt-36{
   margin-top: 9rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-1{
-  margin-top: 0.25rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
 }
 
 .mt-8{
@@ -882,8 +862,12 @@ video {
   height: 2.5rem;
 }
 
-.w-64{
-  width: 16rem;
+.h-8{
+  height: 2rem;
+}
+
+.w-80{
+  width: 20rem;
 }
 
 .w-\[this-is\\\\\]{
@@ -898,12 +882,12 @@ video {
   width: weird-and-invalid;
 }
 
-.w-80{
-  width: 20rem;
+.min-w-3{
+  min-width: 0.75rem;
 }
 
-.w-96{
-  width: 24rem;
+.min-w-3\.5{
+  min-width: 0.875rem;
 }
 
 .flex-shrink{
@@ -1430,6 +1414,30 @@ video {
 
 .justify-items-stretch{
   justify-items: stretch;
+}
+
+.gap-y-10{
+  row-gap: 2.5rem;
+}
+
+.gap-y-3{
+  row-gap: 0.75rem;
+}
+
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
+}
+
+.gap-y-5{
+  row-gap: 1.25rem;
+}
+
+.gap-y-6{
+  row-gap: 1.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]){
@@ -2108,16 +2116,8 @@ video {
   font-weight: 700;
 }
 
-.font-light{
-  font-weight: 300;
-}
-
 .font-extralight{
   font-weight: 200;
-}
-
-.font-thin{
-  font-weight: 100;
 }
 
 .uppercase{
@@ -2432,6 +2432,11 @@ video {
   --tw-ring-inset: inset;
 }
 
+.ring-red-500{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+}
+
 .blur{
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2509,10 +2514,6 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
 }
 
 .ease-in{
@@ -2637,6 +2638,61 @@ video {
   text-align: center;
 }
 
+.focus\:border:focus{
+  border-width: 1px;
+}
+
+.focus\:border-neutral-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(115 115 115 / var(--tw-border-opacity));
+}
+
+.focus\:border-red-700:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(185 28 28 / var(--tw-border-opacity));
+}
+
+.focus\:shadow-sm:focus{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.focus\:shadow-white:focus{
+  --tw-shadow-color: #fff;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:outline-8:focus{
+  outline-width: 8px;
+}
+
+.focus\:outline-red-800:focus{
+  outline-color: #991b1b;
+}
+
+.focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-8:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(8px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-red-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
+}
+
 .focus\:hover\:text-center:hover:focus{
   text-align: center;
 }
@@ -2646,10 +2702,6 @@ video {
 }
 
 @media (min-width: 640px){
-  .sm\:w-80{
-    width: 20rem;
-  }
-
   .sm\:w-96{
     width: 24rem;
   }
